--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -66,7 +66,7 @@
 						mui.toast('请输入手机号码');
 						return;
 					}
-					var myreg = /^(((13[0-9]{1})|(15[0-9]{1})|(18[0-9]{1}))+\d{8})$/
+					var myreg = /^[1][3-9]\d{9}$/
 
 					if(!myreg.test(phoneNum.value)) {
 						mui.toast('请输入有效的手机号码！');
