发布作业 隐藏附件功能

--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -46,7 +46,8 @@
 				</div>
 				<div class="input-erea">
 					<textarea id="publish-content" type="text"  placeholder="输入你要布置的作业内容"></textarea>
-					<div class="publish-extras">
+					<!--一期隐藏拍照、相机、录音功能-->
+					<div class="publish-extras display-none">
 						<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>
 						<a id="getImg" class="mui-icon iconfont icon-xiangji1"></a>
 						<a id="getVideo" class="mui-icon iconfont icon-shipin"></a>
