--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -22,7 +22,8 @@
 		<div class="mui-content">
 			<div  class="input-content">
 				<textarea id="input-content" placeholder="请输入内容" value=""></textarea>
-			    <div id="take_pic" class="take_pic">
+				<!--一期暂时不插入图片-->
+			    <div id="take_pic" class="take_pic display-none">
 				    <a class="mui-icon iconfont icon-xiangji"></a>
 			    </div>
 			    <!--<div id="add_file" class="add_file">
