--- a/JiaoBaoYun-hb/html/quan/aboutme_sub.html
+++ b/JiaoBaoYun-hb/html/quan/aboutme_sub.html
@@ -33,6 +33,7 @@
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/publicHomeworkProtocol.js" ></script>
+		<script src="../../js/utils/native.js"></script>
 		<script src="../../js/quan/about-me.js"></script>
 	</body>
 
