管理员身份，不显示作业问题

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -498,7 +498,7 @@
 
 								var isHave = true;
 								//2老师
-								if(tempModel.mstype == 2) {
+								if(tempModel.mstype == 2||tempModel.mstype == 1) {
 									for(var m in teacherClasses) {
 										if(tempModel.gid == teacherClasses[m].gid) {
 											isHave = false;
