--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -30,9 +30,8 @@
 			.cloud-info {
 				position: absolute;
 				/*顶部信息*/
-				left:12%;
-				top:20%;
-
+				left: 5%;
+				top: 2%;
 				/*float: right;
 
 				margin-right: 50px;*/
@@ -52,6 +51,7 @@
 				/*名字*/
 				color: white;
 				margin-bottom: 5px;
+				font-size: 18px;
 			}
 
 			.cloud-top-icon {
@@ -79,7 +79,7 @@
 
 			.cloud-capacity {
 				/*容量*/
-				margin-top: 3px;
+				margin-top: 6px;
 				color: white;
 			}
 
@@ -155,6 +155,11 @@
 
 			.mui-progressbar {
 				border-radius: 5px;
+				background-color: #EBEBEB;
+			}
+
+			.mui-progressbar span {
+				background-color: #4aa5fc;
 			}
 
 			.iconfont {
@@ -175,14 +180,14 @@
 				<div class="mui-scroll">
 					<!--顶部-->
 					<div class="cloud-top" style="min-height: 100px">
-						<img id="imge_bg" src="../../image/cloud/cloud_bg2.png" style="width: 100%;position: absolute;" />
+						<img id="imge_bg" src="../../image/cloud/cloud_bg3.png" style="width: 100%;position: absolute;" />
 						<div class="cloud-info">
 							<!--<div class="mui-row" style="">-->
 							<!--<div class="mui-col-sm-3 mui-col-xs-3">
 									<img id="cloud_prsonalimge" src="../../image/utils/default_personalimage.png">
 								</div>-->
 							<!--<div class="mui-col-sm-12 mui-col-xs-12" style="margin-top: 15px;">-->
-							<div id="cloud_name" class="common-font-family-Bold mui-ellipsis" >
+							<div id="cloud_name" class="common-font-family-Bold mui-ellipsis">
 
 							</div>
 							<!--<font>
@@ -191,7 +196,6 @@
 										<img class="cloud-top-icon" src="../../image/cloud/cloud_yuan.gif" />
 										<font id="yuan">50元</font>
 									</font>-->
-
 
 							<div class="mui-progressbar mui-progressbar-in" style="float: left;">
 								<span></span>
@@ -208,7 +212,7 @@
 							<!--</div>-->
 						</div>
 					</div>
-					<div id="bottom" style="position: absolute;width: 100%;">
+					<div id="bottom" style="width: 100%;position: relative;">
 						<!--云存储-->
 						<ul id="cloudstorage" class="mui-table-view mui-grid-view " style="padding-right: 0px;">
 							<li class="mui-table-view-cell mui-media cloud-font">
@@ -339,6 +343,7 @@
 					changeInfo();
 					changeData();
 					events.fireToPageNone('storage_upload.html', 'createFolder'); //在程序中创建utid的文件夹和对应的上传下载文件夹
+					fileArray = []
 				});
 
 				//修改用户信息
