--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -73,7 +73,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title"></h1>
-			<a id="commit" class="mui-icon mui-icon-checkmarkempty mui-pull-right"></a>
+			<a id="commit" class="mui-icon mui-icon-checkmarkempty mui-pull-right" style="font-size: 40px;line-height: 0.6;"></a>
 		</header>
 		<div class="mui-content">
 	</body>
