--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -683,7 +683,9 @@
 						//获得主页面的webview
 						var main = plus.webview.getWebviewById('../quan/tab-zone.html');
 						//触发tab-zone页面的setRead事件
-						mui.fire(main, 'setRead');
+						mui.fire(main, 'setRead',{
+							flag:3
+						});
 
 					}
 
