发布作业字数限制

--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -45,7 +45,7 @@
 					
 				</div>
 				<div class="input-erea">
-					<textarea id="publish-content" type="text"  placeholder="输入你要布置的作业内容"></textarea>
+					<textarea id="publish-content" type="text" maxlength="500" placeholder="输入你要布置的作业内容,最多500字！"></textarea>
 					<!--一期隐藏拍照、相机、录音功能-->
 					<div class="publish-extras display-none">
 						<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>
