--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -11,7 +11,7 @@
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<style >
-			.signature{
+			.mui-pull-right{
 				max-width: 70%;
 			}
 		</style>
@@ -36,7 +36,7 @@
 					</li>
 					<li class="mui-table-view-cell open-newPage" pos='0'>
 						<a href="javascript:;">
-							<p class="mui-pull-right" id='nick'>暂无</p>
+							<p class="mui-pull-right single-line" id='nick'>暂无</p>
 							<div class="mui-media-body">
 								昵称
 
