--- a/JiaoBaoYun-hb/html/mine/qun_manage.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage.html
@@ -301,7 +301,7 @@
 					mui('#all_mem').on('tap', '.mui-table-view-cell', function(e) {
 						console.log('成员：id:' + this.getAttribute('id') + '|gid:' + this.getAttribute('data-gid') + '|gutid:' + this.getAttribute('data-gutid'));
 						var gid = this.getAttribute('data-gid');
-						var gutid = this.getAttribute('data-gutid')
+						var gutid = this.getAttribute('data-gutid');
 						mui.each(qunMem, function(index, item) {
 							if(item.gid == gid && item.gutid == gutid) {
 								mui.each(qunList, function(index2, item2) {
@@ -312,6 +312,7 @@
 										return false;
 									}
 								});
+								//console.log('item:'+JSON.stringify(item));
 								events.fireToPageWithData('../quan/group-pInfo.html', 'postPInfo', item);
 								return false;
 							}
