--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change_post.html
@@ -31,6 +31,20 @@
 				var subData = main.data; //接收页面传入的参数值
 				console.log('从父页面获取的数据:' + JSON.stringify(subData));
 				//---从父页面获取数据---end---
+				switch(subData.type) {
+					case 'gname': //名称
+						jQuery('#input').prop("maxLength", "20");
+						break;
+					case 'gnote': //群说明
+						jQuery('#input').prop("maxLength", "30");
+						break;
+					case 'qunremark': //群备注
+						jQuery('#input').prop("maxLength", "30");
+						break;
+					default:
+						console.log('修改群资料的类型选择出错');
+						break;
+				}
 				document.getElementById("input").value = subData.value;
 				document.getElementById('save').addEventListener('tap', function() {
 					var vvl = document.getElementById("input").value;
