0004028: 修改昵称后班级空间内的成员信息不变

--- a/JiaoBaoYun-hb/html/quan/edit-remark.html
+++ b/JiaoBaoYun-hb/html/quan/edit-remark.html
@@ -39,7 +39,7 @@
 							if(inputValue && inputValue.length > 0) {
 								var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 								postDataPro_PostUmkA({
-									vvl: remarkInfo.butid,
+									vvl: remarkInfo.utid,
 									vvl1: inputValue
 								}, wd, function(data) {
 									wd.close();
