--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -360,7 +360,7 @@
 
 				//---存储start---
 				//云存储显示的文件
-				mui('#cloudstorage').on('tap', '.mui-table-view-cell', function() {
+				mui('#cloudstorage').on('tap', '.cloud-text-align-center', function() {
 					events.fireToPageWithData('storage_main.html', 'init', {
 						fid: '0', //文件id,顶层0
 						showTop: true, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
@@ -386,14 +386,14 @@
 				});
 
 				//云存储右侧按钮
-				//				mui('#cloudstorage').on('tap', '.cloud-bottom-icon', function() {
-				//					events.fireToPageWithData('storage_main.html', 'init', {
-				//						fid: '0', //文件id,顶层0
-				//						showTop: true, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
-				//						title: '云盘—云存储', //标题名
-				//						top: fileArray //顶层文件和文件夹的数据
-				//					});
-				//				});
+				mui('#cloudstorage').on('tap', '.mui-icon-arrowright', function() {
+					events.fireToPageWithData('storage_main.html', 'init', {
+						fid: '0', //文件id,顶层0
+						showTop: true, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
+						title: '云盘—云存储', //标题名
+						top: fileArray //顶层文件和文件夹的数据
+					});
+				});
 
 				//增加文件夹
 				mui('#cloudstorage').on('tap', '#addFolder', function(e) {
