1、多次点击一键提醒出现问题 2、学生临时作业详情 老师没有上传答案时出现问题

--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -164,7 +164,7 @@
 					var arrowdown = homeworkDetailNodes.checkDetailBtn.getElementsByTagName('span')[0];
 					arrowdown.className = 'mui-icon mui-icon-arrowup'
 				})
-				events.addTap('alertBar', function() {
+				events.addTap('alertAll', function() {
 					console.log('一键提醒');
 					alertStu(homeworkDetailNodes.alertAllBtn);
 					
