--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -213,7 +213,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-input-row">
 								<label>教龄:</label>
-								<input id="tea_expsch" type="tel" class="mui-input-clear">
+								<input id="tea_expsch" type="number" oninput="if(value.length>10)value=value.slice(0,10)" class="mui-input-clear">
 							</div>
 						</li>
 						<li class="mui-table-view-cell">
@@ -282,7 +282,6 @@
 					jQuery('#tea_job').prop("maxLength", "10");
 					jQuery('#tea_sub').prop("maxLength", "10");
 					jQuery('#tea_title').prop("maxLength", "10");
-					jQuery('#tea_expsch').prop("maxLength", "10");
 				}
 
 				//创建家长资料
